# emperor

./: .gitignore  .gitmodules  CMakeLists.txt  autogen.sh  package.json
cmake/: 3rdparty.cmake
src/discord/: CMakeLists.txt  Client.h  Emoji.cpp  Emoji.h  Role.cpp  Role.h  RoleTags.cpp  RoleTags.h  User.cpp  User.h
src/emperor/: CMakeLists.txt  main.cpp
